# esgf-stac-tests

./: README.md  pyproject.toml  test_stac.py
.github/workflows/: ci.yml
src/esgf_stac_tests/: __main__.py
src/esgf_stac_tests/fixtures/data_challenge_4/: conftest.py
src/esgf_stac_tests/fixtures/default/: conftest.py
src/esgf_stac_tests/tests/: conftest.py  test_stac.py
