[project]
name = "esgf-stac-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pystac>=1.13.0",
    "pystac-client>=0.9.0",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--verbose"

[project.scripts]
esgf-stac-tests = "esgf_stac_tests.__main__:main"

[tool.setuptools.package-data]
esgf-stac-tests = ['tests/*', 'tests/**/*']

[tool.ruff]
target-version = "py313"
line-length = 138

[tool.ruff.lint]
select = ["ALL"]
extend-safe-fixes = [
    "UP035", # Auto upgrade to builtin classes for typehinting
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101", # Allow use of assert statements in tests
    "S113", # use of `requests` call without timeout
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = ["ruff>=0.12.12"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"